# timenotes-mcp

./: .gitignore  .secrets.example  Dockerfile  LICENSE  README.md  docker-compose.yml  integration_test.py  oauth_test.py  pyproject.toml  scenario_test.py  stdio_test.py  tools_test.py
timenotes_mcp/: __main__.py  _secrets.py  client.py  http_app.py  login.html  oauth.py  server.py
